--- a/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-checkbox.twig
+++ b/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-checkbox.twig
@@ -4,6 +4,7 @@
   {% include("@bolt/form-label.twig") with {
     "title": labelTitle,
     "displayType": "inline",
+    "inputElementType": "checkbox",
     "attributes": {
       "for": elementId
     }
