--- a/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-textarea.twig
+++ b/src/_patterns/02-components/bolt-form/demo/form-elements/form-element-demo-textarea.twig
@@ -1,17 +1,17 @@
 {% extends "@bolt/form-element.twig" %}
 
-{% set label_display = 'after' %}
-
 {% set label %}
   {% include("@bolt/form-label.twig") with {
-    "title": "Description"
+    "title": "Job Description",
+    "displayType": "floating"
   } %}
 {% endset %}
 
 {% set children %}
   {% include("@bolt/form-textarea.twig") with {
     "attributes": {
-      "placeholder": "Describe the job"
+      "placeholder": "Describe the job",
+      "required": true
     }
   } %}
 {% endset %}
