--- a/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
+++ b/src/_patterns/02-components/bolt-form/src/inputs/form-textarea.twig
@@ -1,7 +1,8 @@
 {% set attributes = create_attribute(attributes | default({})) %}
+{% set wrapperAttributes = create_attribute(wrapperAttributes | default({})) %}
 {% set classes = ['c-bolt-input'] %}
+{% set wrapperClasses = ['c-bolt-custom-input'] %}
 
-{# TODO Add support for floating label #}
-<div{{ wrapper_attributes }}>
+<div{{ wrapperAttributes.addClass(wrapperClasses) }}>
   <textarea{{ attributes.addClass(classes) }}>{{ value }}</textarea>
 </div>
