Teaser - commented out get_data for non-existent schema file (threw PL errors on start up)

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/teaser/00-teaser-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/teaser/00-teaser-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-teaser/teaser.schema.yml') %}
+{#{% set schema = get_data('@bolt-components-teaser/teaser.schema.yml') %}#}
 {% set readme = source('@bolt-components-teaser/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-teaser/teaser.twig" with {
