Removing c-bolt-site class from PL body

--- a/apps/pattern-lab--workshop/src/_meta/_00-head.twig
+++ b/apps/pattern-lab--workshop/src/_meta/_00-head.twig
@@ -26,4 +26,5 @@
     <!-- End Pattern Lab -->
 
   </head>
-  <body class="c-bolt-site">
+  {# @todo Get `c-bolt-site` class back someplace, perhaps on a template/layout, perhaps on the `<body>` when needed. Was causing all Patterns to expand too wide, no matter browser width #}
+  <body class="">
