Enable stock Choices options for select form elements

--- a/src/_patterns/02-components/bolt-form/src/inputs/form-select.twig
+++ b/src/_patterns/02-components/bolt-form/src/inputs/form-select.twig
@@ -1,5 +1,5 @@
 {% set attributes = create_attribute(attributes | default({})) %}
-{% set classes = ["c-bolt-input", "c-bolt-input--select"] %}
+{% set classes = ["c-bolt-input", "c-bolt-input--select", "js-bolt-form-select"] %}
 
 {% spaceless %}
   <select{{ attributes.addClass(classes) }}>
