styles: search results quick summary

--- a/src/_patterns/04-pages/d8-news/d8-media-browse--list-view.twig
+++ b/src/_patterns/04-pages/d8-news/d8-media-browse--list-view.twig
@@ -94,8 +94,24 @@
 
   <div class="c-bolt-band c-bolt-band--full c-bolt-band--medium t-bolt-light">
     <div class="o-bolt-wrapper">
-      <p class="c-bolt-text c-bolt-text--bold">
-        Showing 555 results. (<a href="javascript:" class="c-bolt-link">Clear filters</a>)
+      <p class="c-bolt-text">
+        Showing 555 results in
+        <span class="c-bolt-search-inline-tags">
+          <a href="javascript:" class="c-bolt-search-inline-tag">
+            Case Management
+          </a>
+          <a href="javascript:" class="c-bolt-search-inline-tag">
+            Cloud
+          </a>
+          <a href="javascript:" class="c-bolt-search-inline-tag">
+            CRM
+          </a>
+          <a href="javascript:" class="c-bolt-search-inline-tag">
+            Healthcare
+          </a>
+        </span>
+        <strong>"search term"</strong>
+        (<a href="javascript:" class="c-bolt-link">Clear all</a>)
       </p>
       {% grid %}
         {% cell "u-bolt-width-1/1 u-bolt-width-3/12@medium" %}
@@ -141,7 +157,7 @@
                 <form class="c-bolt-form" action="#" method="post" onsubmit="return false;">
                   <fieldset class="c-bolt-fieldset">
                     <legend class="c-bolt-legend">
-                      <h2 class="c-bolt-headline c-bolt-headline--large">
+                      <h2 class="c-bolt-headline c-bolt-headline--small">
                         <span class="c-bolt-headline__text">
                           Date
                         </span>
@@ -188,7 +204,7 @@
                   </fieldset>
                   <fieldset class="c-bolt-fieldset">
                     <legend class="c-bolt-legend">
-                      <h2 class="c-bolt-headline c-bolt-headline--large">
+                      <h2 class="c-bolt-headline c-bolt-headline--small">
                         <span class="c-bolt-headline__text">
                           Topic
                         </span>
@@ -277,7 +293,7 @@
                   </fieldset>
                   <fieldset class="c-bolt-fieldset">
                     <legend class="c-bolt-legend">
-                      <h2 class="c-bolt-headline c-bolt-headline--large">
+                      <h2 class="c-bolt-headline c-bolt-headline--small">
                         <span class="c-bolt-headline__text">
                           Industry
                         </span>
