--- a/src/_patterns/04-pages/d8-news/d8-press-browse--grid-view.twig
+++ b/src/_patterns/04-pages/d8-news/d8-press-browse--grid-view.twig
@@ -136,7 +136,7 @@
                 <form class="c-bolt-form" action="#" method="post" onsubmit="return false;">
                   <fieldset class="c-bolt-fieldset">
                     <legend class="c-bolt-legend">
-                      <h2 class="c-bolt-headline c-bolt-headline--large">
+                      <h2 class="c-bolt-headline c-bolt-headline--small">
                         <span class="c-bolt-headline__text">
                           Date
                         </span>
@@ -183,7 +183,7 @@
                   </fieldset>
                   <fieldset class="c-bolt-fieldset">
                     <legend class="c-bolt-legend">
-                      <h2 class="c-bolt-headline c-bolt-headline--large">
+                      <h2 class="c-bolt-headline c-bolt-headline--small">
                         <span class="c-bolt-headline__text">
                           Topic
                         </span>
@@ -272,7 +272,7 @@
                   </fieldset>
                   <fieldset class="c-bolt-fieldset">
                     <legend class="c-bolt-legend">
-                      <h2 class="c-bolt-headline c-bolt-headline--large">
+                      <h2 class="c-bolt-headline c-bolt-headline--small">
                         <span class="c-bolt-headline__text">
                           Industry
                         </span>
