--- a/src/_patterns/02-components/bolt-search/src/search.scss
+++ b/src/_patterns/02-components/bolt-search/src/search.scss
@@ -94,11 +94,47 @@ $bolt-search-filters-transition: $bolt-transition;
 
 
 
+.c-bolt-search-inline-tags {
+  @include bolt-margin(0);
+  @include bolt-padding(0);
+
+  display: inline;
+}
+
+.c-bolt-search-inline-tag {
+  @include bolt-font-weight(semibold);
+  display: inline;
+  color: inherit;
+  color: var(--bolt-theme-link, inherit);
+  text-decoration: none;
+  transition: all $bolt-transition;
+
+  &:after {
+    @include bolt-margin(0 0.1rem);
+
+    display: inline-block;
+    width: 3px;
+    height: 3px;
+    content: '';
+    vertical-align: middle;
+    border-radius: 3px;
+    background-color: inherit;
+    background-color: var(--bolt-theme-text, inherit);
+  }
+
+  &:hover {
+    text-decoration: line-through;
+  }
+}
+
+
 
 
 /* ------------------------------------ *\
-   Form Sandbox
+   Forms
 \* ------------------------------------ */
+
+@import '@bolt/tools-all';
 
 // General Form Elements
 select {
@@ -287,6 +323,7 @@ $bolt-input-transition: $bolt-transition;
   line-height: $bolt-floating-label-text-scale;
   white-space: nowrap;
   user-select: none;
+  pointer-events: none;
   opacity: 0;
   transform: translate3d(0, -15%, 0) scale(0.2);
   transform-origin: 0 100%;
@@ -294,7 +331,9 @@ $bolt-input-transition: $bolt-transition;
 }
 
 .c-bolt-input.is-filled,
-.c-bolt-input:focus {
+.c-bolt-input:focus,
+.c-bolt-custom-input.is-active {
+  // [Mai] A custom input is considered active if the regular input inside is filled or in focus.
   & ~ .c-bolt-floating-label {
     opacity: 1;
     transform: translate3d(0, 0, 0) scale($bolt-floating-label-text-scale);
@@ -479,11 +518,12 @@ $bolt-input-transition: $bolt-transition;
 $bolt-input-message-text-color--invalid: bolt-color(error); // TODO: [Mai] This is the theme error color
 
 .c-bolt-input-message {
-  @include bolt-padding(small, squished);
+  @include bolt-padding(xxsmall small);
   @include bolt-font-size(xsmall);
 }
 
 .c-bolt-input-message--invalid {
+  @include bolt-font-weight(semibold);
   display: none; // TODO: [Mai] Remove this if invalid messages are dynamically generated through javascript.
   color: $bolt-input-message-text-color--invalid;
 }
