Headline - added some fixes and new text demo

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/headline/15-headline-alignment-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/headline/15-headline-alignment-variation.twig
@@ -7,8 +7,9 @@
 } %}
 
 {% for alignment, alignmentName in alignmentExamples %}
+  <p>Align: {{ alignmentName }}</p>
   {% include "@bolt-components-headline/headline.twig" with {
-    text: "This is an example of align " ~ alignmentName,
+    text: "This is an example of Align " ~ alignmentName,
     tag: "h2",
     size: "xxlarge",
     align: alignment
