--- a/apps/pattern-lab--workshop/src/_patterns/02-components/headline/10-headline-header-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/headline/10-headline-header-variation.twig
@@ -8,8 +8,9 @@
 } %}
 
 {% for tag, heading in headingExamples %}
+  <p>{{ tag|upper }}</p>
   {% include "@bolt-components-headline/headline.twig" with {
-    text: "This is an example of " ~ tag,
+    text: "This is an example of " ~ tag|upper,
     tag: tag,
     size: heading,
   } only %}
