--- a/apps/pattern-lab--workshop/src/_patterns/02-components/headline/25-headline-icon-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/headline/25-headline-icon-variation.twig
@@ -1,5 +1,5 @@
 {% include "@bolt-components-headline/headline.twig" with {
-  text: "Headline Postfixed with icon",
+  text: "Headline Postfixed with Icon",
   icon: {
     name: "search",
   }
