--- a/apps/pattern-lab--workshop/src/_patterns/02-components/headline/30-headline-link-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/headline/30-headline-link-variation.twig
@@ -1,10 +1,10 @@
 {% include "@bolt-components-headline/headline.twig" with {
-  text: "This headline is a link, with default icon",
+  text: "This headline is a link, with Default Icon",
   url: "https://www.google.com"
 } only %}
 
 {% include "@bolt-components-headline/headline.twig" with {
-  text: "This headline is also a link, with defined icon",
+  text: "This headline is also a link, with Defined Icon",
   url: "https://www.google.com",
   icon: {
     name: "search"
