--- a/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
+++ b/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
@@ -316,7 +316,7 @@
         </span>
       </span>
       -
-      <span class="c-bolt-tooltip c-bolt-tooltip--spacing-small c-bolt-tooltip--action is-push-right is-valign-bottom">
+      <span class="c-bolt-tooltip c-bolt-tooltip--spacing-medium c-bolt-tooltip--action is-push-right is-valign-bottom">
         <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-action-2">
           <strong>Action with help text</strong>
         </mark>
@@ -329,6 +329,45 @@
               Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis.
             </span>
             <a href="javascript:" class="c-bolt-button c-bolt-button--primary">Action &raquo;</a>
+          </span>
+        </span>
+      </span>
+    </p>
+  </div>
+  <div class="c-bolt-band c-bolt-band--small">
+    <h2 class="c-bolt-headline c-bolt-headline--xxlarge">
+      Spacing options
+    </h2>
+    <p>
+      <span class="c-bolt-tooltip c-bolt-tooltip--spacing-xsmall c-bolt-tooltip--action is-push-right is-valign-bottom">
+        <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-action-2">
+          <strong>X-Small</strong>
+        </mark>
+        <span id="tooltip-action-2" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+          <span class="c-bolt-tooltip__content-bubble">
+            <span class="c-bolt-text c-bolt-text--small">X-Small Spacing. Push right top. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+          </span>
+        </span>
+      </span>
+      -
+      <span class="c-bolt-tooltip c-bolt-tooltip--spacing-small c-bolt-tooltip--action is-push-right is-valign-bottom">
+        <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-action-2">
+          <strong>Small</strong>
+        </mark>
+        <span id="tooltip-action-2" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+          <span class="c-bolt-tooltip__content-bubble">
+            <span class="c-bolt-text c-bolt-text--small">Small Spacing. Push right top. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+          </span>
+        </span>
+      </span>
+      -
+      <span class="c-bolt-tooltip c-bolt-tooltip--spacing-medium c-bolt-tooltip--action is-push-right is-valign-bottom">
+        <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-action-2">
+          <strong>Medium</strong>
+        </mark>
+        <span id="tooltip-action-2" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+          <span class="c-bolt-tooltip__content-bubble">
+            <span class="c-bolt-text c-bolt-text--small">Medium Spacing. Push right top. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
           </span>
         </span>
       </span>
