--- a/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/_00-background-band-demo.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/_00-background-band-demo.twig
@@ -1,26 +1,14 @@
 {% embed "@bolt-components-band/band.twig" with {
-  theme: "dark",
-  size: "large",
+  size: size | default("large"),
+  theme: theme | default("dark"),
   fullBleed: true,
   tag: "figure",
   contentTag: "figcaption"
 } %}
   {% block band_background %}
-    {% include "@bolt-components-background/background.twig" with {
-      opacity: "heavy",
-      fill: "gradient",
-      focalPoint: {
-        vertical: "center",
-        horizontal: "center"
-      },
-      contentItems: [
-        {
-          pattern: "image",
-          src: "/images/content/backgrounds/background-tall-4.jpg",
-          lazyload: false,
-        }
-      ]
-    } %}
+    {% if background %}
+      {% include "@bolt-components-background/background.twig" with background only %}
+    {% endif %}
   {% endblock band_background %}
 
   {% block band_content %}
@@ -36,9 +24,9 @@
       } %}
       {# teaserPosition == "center" ? "o-bolt-grid--center" : "" #}
 
-      {#{% if teaserPosition == "right" %}#}
+      {% if teaserPosition == "right" %}
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}{% endcell %}
-      {#{% endif %}#}
+      {% endif %}
 
 
       {% cell with {
@@ -50,26 +38,27 @@
         }
       } %}
       {# teaserAlign == "center" ? "u-bolt-text-align-center" : "" #}
-        {% include "@bolt/headline.twig" with {
+        {% include "@bolt-components-headline/headline.twig" with {
           text: "Visualization & Simulation",
           size: "xxxlarge",
           tag: "h1"
         } only %}
 
-        {% include "@bolt/subheadline.twig" with {
+        {% include "@bolt-components-headline/subheadline.twig" with {
           text: "Imagine the Future with Decision Hub",
           size: "xxlarge",
           tag: "h2"
         } only %}
 
-        {% include "@bolt/text.twig" with {
+        {% include "@bolt-components-headline/text.twig" with {
           text: "Continuously improve results by visualizing how future adjustments to your strategies can impact business performance. Simulate and test your ideas, evaluate the results using intuitive views, and then deploy optimal alterations."
         } only %}
 
-        {% include "@bolt/button.twig" with {
+        {% include "@bolt-components-button/button.twig" with {
           text: "View the data sheet"
         } only %}
       {% endcell %}
     {% endgrid %}
+
   {% endblock band_content %}
 {% endembed %}
